--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
 {% block page_title %}Home Page{% endblock %}
-
+<div class="">
+    <h1>Home</h1>
+</div>
 {% block page_heading %}Home{% endblock %}
