--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -7,11 +7,14 @@
 {% block page_heading %}User Login{% endblock %}
 
 {% block content %}
-<form method="POST">
-    {% csrf_token %}
-    {{ login_form | as_bootstrap }}
-    <button type="submit" class="btn btn-default">Login</button>
-</form>
+<div class="container">
+    <h1>Login</h1>
+    <form method="POST">
+        {% csrf_token %}
+        {{ login_form | as_bootstrap }}
+        <button type="submit" class="btn btn-default">Login</button>
+    </form>
 
-<p><a href="{% url 'password_reset' %}">Reset Password</a></p>
+    <p><a href="{% url 'password_reset' %}">Reset Password</a></p>
+</div>
 {% endblock %}
