--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -1,18 +1,18 @@
 {% extends 'base.html' %}
 
 {% load bootstrap_tags %}
-
 {% block page_title %}Registration Page{% endblock %}
 
 {% block page_heading %}User Registration{% endblock %}
 
 {% block content %}
 
-<p>If you already have an account, you can <a href="{% url 'login' %}">sign in </a></p>
-
+<div class="container">
+    <h1>Register</h1>
 <form method="POST">
     {% csrf_token %} {{ registration_form | as_bootstrap }}
     <button type="submit" class="btn btn-default">Register</button>
+    <p>If you already have an account, you can <a href="{% url 'login' %}">sign in </a></p>
 </form>
-
+</div>
 {% endblock %}
