READDME added, deployment to Heroku

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial;
     padding-top: 100px;
+    background-image: url("../images/guitar-2222350_1920.jpg");
 }
 
 footer {
