--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
+
 <div class="card-deck">
     {% for product in products %}
 
@@ -10,7 +11,7 @@
 
             <h3>{{ product.name }}</h3>
             <p class="product.description">{{ product.description }}</p>
-            <p>{{ product.price }}</p>
+            <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ product.price }}</p>
 
             <form method="post" action="{% url 'add_to_cart' product.id %}">
                 {% csrf_token %}
