--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,16 +1,19 @@
 body {
     font-family: Arial;
-    padding-top: 100px;
-    background-image: url("../images/guitar-2222350_1920.jpg");
+    background-image: url("../images/");
 }
 
-footer {
-    margin-top: 40px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-top: 1px solid #ededed;
-    color: #A9A9A9;
+.jumbotron {
+  background-image: url(../images/guitar-2222350_1920.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  margin-top: 0.5rem;
+  max-width: 100%;
+  height: auto;
 }
+
+
 
 .icon-bar {
     background-color: #fff;
