--- a/templates/base.html
+++ b/templates/base.html
@@ -57,13 +57,19 @@
             </div>
         </div>
     {% endif %}
-    <div class="container">
-        <div class="display">
+    <header class="jumbotron my-4">
+        <h1 class="display-3 text-info text-right">Guitar World</h1>
+        <div class="row">
+            <div class="display-right">
             <form action="{% url 'search' %}" method="get">
                 <input type="text" name="q">
                 <button type="search">Search</button>
             </form>
         </div>
+        </div>
+    </header>
+    <div class="container">
+
         {% block content %} {% endblock %}
     </div>
     <footer class="py-5 bg-dark">
