bootstrap style changed on cards

--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 
-<div class="card-deck">
+<div class="col-lg-4 d-flex align-items-stretch">
     {% for product in products %}
 
     <div class="card col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
