--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -2,10 +2,10 @@
 {% block content %}
 
 
-<div class="col-lg-4 d-flex align-items-stretch">
+<div class="container">
     {% for product in products %}
 
-    <div class="card col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
+    <div class="col-lg-4 d-flex align-items-stretch">
         <div class="panel-body">
             <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}'); height: 300px; object-fit: cover;"></div>
 
