--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -6,7 +6,7 @@
     <div class="card-deck">
     {% for product in products %}
 
-        <div class="col-lg-4 d-flex align-items-stretch">
+        <div class="col-lg-4">
             <div class="panel-body">
                 <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}'); height: 300px; object-fit: cover;"></div>
 
