bootstrap style changed on cards

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .jumbotron {
-  background-image: url(../images/guitar-2222350_1920.jpg);
+  background-image: url(images/guitar-2222350_1920.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
