--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -2,30 +2,24 @@
 {% block content %}
 
 
-<div class="container">
+<div class="container mt-5">
     <div class="card-deck">
     {% for product in products %}
-
-        <div class="col-lg-4">
-            <div class="panel-body">
-                <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}'); height: 300px; object-fit: cover;"></div>
-
-                <h3>{{ product.name }}</h3>
+        <div class="card">
+            <div class="product img-fluid" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}'); height: 300px; object-fit: cover;" alt="image"></div>
+            <h3>{{ product.name }}</h3>
                 <p class="product.description">{{ product.description }}</p>
                 <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ product.price }}</p>
-
-                <form method="post" action="{% url 'add_to_cart' product.id %}">
+            <form method="post" action="{% url 'add_to_cart' product.id %}">
                     {% csrf_token %}
-                    <div class="input-group">
-                        <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity">
-                        <span class="input-group-btn">
+                <div class="input-group">
+                    <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity">
+                    <span class="input-group-btn">
                             <button class="btn btn-success" type="submit">Add</button>
-                        </span>
-                    </div>
-                </form>
-            </div>
+                    </span>
+                </div>
+            </form>
         </div>
-
         {% endfor %}
     </div>
 </div>
