--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,7 @@
     {% endif %}
     <header class="jumbotron my-4">
         <h1 class="display-3 text-Center">Guitar World</h1>
+        <h5>A World of Guitars</h5>
     </header>
     <div class="container">
 
@@ -74,9 +75,6 @@
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 </body>
 </html>
