--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
     {% endif %}
     <header class="jumbotron my-4">
         <h1 class="display-3 text-Center">Guitar World</h1>
-        <h5>A World of Guitars</h5>
+        <h3 class="display-3 text-Center">A World of Guitars</h3>
     </header>
     <div class="container">
 
