bootstrap style changed on cards

--- a/templates/base.html
+++ b/templates/base.html
@@ -55,10 +55,10 @@
             </div>
         </div>
     {% endif %}
-    <header class="jumbotron my-4">
-        <h1 class="display-3 text-Center">Guitar World</h1>
-        <h3 class="display-3 text-Center">A World of Guitars</h3>
-    </header>
+    <div class="jumbotron">
+      <h1>Guitar World</h1>
+      <p>A World of Guitars</p>
+    </div>
     <div class="container">
 
         {% block content %} {% endblock %}
