--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -5,9 +5,8 @@
 <div class="container mt-5">
     <div class="card-deck">
     {% for product in products %}
-        <div class="card">
-            <div class="card-body">
-            <div class="product img-fluid" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}'); height: 300px; object-fit: cover;" alt="image"></div>
+        <div class="thumbnail">
+            <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}'); height: 300px; object-fit: cover;" alt="image"></div>
             <h3>{{ product.name }}</h3>
                 <p class="product.description">{{ product.description }}</p>
                 <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ product.price }}</p>
@@ -20,7 +19,6 @@
                     </span>
                 </div>
             </form>
-            </div>
         </div>
         {% endfor %}
     </div>
