--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -3,7 +3,7 @@
 
 
 <div class="row">
-  <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
+  <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4">
     {% for product in products %}
         <div class="thumbnail">
             <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}'); height: 300px; object-fit: cover;" alt="image"></div>
