--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 
-<div class="row">
+<div class="container-fluid">
   <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4">
     {% for product in products %}
         <div class="thumbnail">
