--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -6,7 +6,7 @@
   <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4">
     {% for product in products %}
         <div class="thumbnail">
-            <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}'); height: 300px; object-fit: cover;" alt="image"></div>
+            <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')></div>
             <h3>{{ product.name }}</h3>
                 <p class="product.description">{{ product.description }}</p>
                 <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ product.price }}</p>
