--- a/templates/base.html
+++ b/templates/base.html
@@ -13,37 +13,29 @@
 </head>
 <body>
     <!-- Fixed masthead -->
-       <nav class="navbar navbar-masthead navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+       <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-info">
+           <a class="navbar-brand" href="/">Guitar World</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand" href="/">Guitar World</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
+            <div id="navbarNavAltMarkup" class="navbar-collapse collapse">
+                <div class="navbar-nav">
                     {% if user.is_authenticated %}
-                        <li><a href="{% url 'profile' %}">Profile</a></li>
-                        <li><a href="{% url 'logout' %}">Log Out</a></li>
+                        <a href="{% url 'profile' %}">Profile</a>
+                        <a href="{% url 'logout' %}">Log Out</a>
                     {%  else %}
-                        <li><a href="{% url 'registration' %}">Register</a></li>
-                        <li><a href="{% url 'login' %}">Log In</a></li>
+                        <a href="{% url 'registration' %}">Register</a>
+                        <a href="{% url 'login' %}">Log In</a>
                     {% endif %}
-                    <li>
                         <a href="{% url 'view_cart' %}">
                             <i class="fa fa-shipping-cart"></i>Cart
                             {% if product_count > 0 %}
                             <label class="badge badge-warning">{{ product_count }}</label>
                             {% endif %}
-                        </a>
-                    </li>
-                </ul>
+                         </a>
+                </div>
             </div>
-        </div>
     </nav>
     {% if messages %}
         <div class="alert alert-success">
