--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -9,7 +9,7 @@
             <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')></div>
             <h3>{{ product.name }}</h3>
                 <p class="product.description">{{ product.description }}</p>
-                <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ product.price }}</p>
+                <p><span> <i class="fas fa-euro-sign"></i></span>{{ product.price }}</p>
             <form method="post" action="{% url 'add_to_cart' product.id %}">
                     {% csrf_token %}
                 <div class="input-group">
