--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
+
+h1 {
+    font-family: Roboto, sans-serif;
+}
+
 body {
-    font-family: Arial;
+    padding-top: 70px;
     background-image: url("images/");
 }
 
 .jumbotron {
-  background-image: url(images/guitar-2222350_1920.jpg);
+  background-image: url(../images/guitar-2222350_1920.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
