--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
 
-
-<div class="container-fluid">
-  <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4">
-    {% for product in products %}
-        <div class="thumbnail">
-            <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')></div>
-            <h3>{{ product.name }}</h3>
-                <p class="product.description">{{ product.description }}</p>
-                <p><span> <i class="fas fa-euro-sign"></i></span>{{ product.price }}</p>
-            <form method="post" action="{% url 'add_to_cart' product.id %}">
+<div class="container">
+    <div class="row text-center">
+        {% for product in products %}
+        <div class="col-lg-3 col-md-6 mb-4">
+            <div class="card" style="width: 16rem;">
+                <img src="{{ MEDIA_URL }}{{ product.image }}" class="card-img-top product" alt="...">
+                <div class="card-body">
+                    <h5 class="product_name">{{ product.name }}</h5>
+                     <p><span> <i class="fas fa-euro-sign"></i></span>{{ product.price }}</p>
+                    <form method="post" action="{% url 'add_to_cart' product.id %}">
                     {% csrf_token %}
                 <div class="input-group">
                     <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity">
@@ -18,9 +18,33 @@
                         <button class="btn btn-success" type="submit">Add</button>
                     </span>
                 </div>
-            </form>
+                     </form>
+                </div>
+            </div>
         </div>
         {% endfor %}
-  </div>
+    </div>
 </div>
+
+<!--<div class="container-fluid">-->
+  <!--<div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4">-->
+    <!--{% for product in products %}-->
+        <!--<div class="thumbnail">-->
+            <!--<div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')></div>-->
+            <!--<h3>{{ product.name }}</h3>-->
+                <!--<p class="product.description">{{ product.description }}</p>-->
+                <!--<p><span> <i class="fas fa-euro-sign"></i></span>{{ product.price }}</p>-->
+            <!--<form method="post" action="{% url 'add_to_cart' product.id %}">-->
+                    <!--{% csrf_token %}-->
+                <!--<div class="input-group">-->
+                    <!--<input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity">-->
+                    <!--<span class="input-group-btn">-->
+                        <!--<button class="btn btn-success" type="submit">Add</button>-->
+                    <!--</span>-->
+                <!--</div>-->
+            <!--</form>-->
+        <!--</div>-->
+        <!--{% endfor %}-->
+  <!--</div>-->
+<!--</div>-->
 {% endblock %}
