--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -11,7 +11,7 @@
     <h1>Register</h1>
 <form method="POST">
     {% csrf_token %} {{ registration_form | as_bootstrap }}
-    <button type="submit" class="btn btn-default">Register</button>
+    <button type="submit" class="btn btn-success">Register</button>
     <p>If you already have an account, you can <a href="{% url 'login' %}">sign in </a></p>
 </form>
 </div>
