--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- Fixed masthead -->
-       <nav class="navbar navbar-expand-lg fixed-top navbar-light">
+       <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-dark">
            <a class="navbar-brand" href="/">Guitar World</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
