bootstrap style changed on cards

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,12 +25,12 @@
                     <ul class="navbar-nav mr-auto">
                     {% if user.is_authenticated %}
                         <li><a class="nav-item nav-link active text-white" href="{% url 'profile' %}">Profile</a></li>
-                        <li><a class="nav-item nav-link active text-white" href="{% url 'logout' %}">Log Out</a></li>
+                        <li><a class="nav-item nav-link text-white" href="{% url 'logout' %}">Log Out</a></li>
                     {%  else %}
-                        <li><a class="nav-item nav-link active text-white" href="{% url 'registration' %}">Register</a></li>
-                        <li><a class="nav-item nav-link active text-white" href="{% url 'login' %}">Log In</a></li>
+                        <li><a class="nav-item nav-link text-white" href="{% url 'registration' %}">Register</a></li>
+                        <li><a class="nav-item nav-link text-white" href="{% url 'login' %}">Log In</a></li>
                     {% endif %}
-                        <li><a class="nav-item nav-link active text-white" href="{% url 'view_cart' %}">
+                        <li><a class="nav-item nav-link text-white" href="{% url 'view_cart' %}">
                             <i class="fa fa-shipping-cart"></i>Cart
                             {% if product_count > 0 %}
                             <label class="badge badge-warning">{{ product_count }}</label>
@@ -75,7 +75,7 @@
 
 <footer class="py-5 bg-dark">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; FLIX 2020</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Guitar World 2020</p>
     </div>
 </footer>
 </body>
