--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -12,7 +12,7 @@
     <form method="POST">
         {% csrf_token %}
         {{ login_form | as_bootstrap }}
-        <button type="submit" class="btn btn-default">Login</button>
+        <button type="submit" class="btn btn-success">Login</button>
     </form>
 
     <p><a href="{% url 'password_reset' %}">Reset Password</a></p>
