--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -3,11 +3,12 @@
 {% load bootstrap_tags %}
 
 {% block content %}
-<div class="container row row-flex">
+<div class="container">
+    <div class="row text-center">
     <h1>Shopping Cart</h1>
     {% for item in cart_items %}
 
-    <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-display">
+    <div class="col-lg-3 col-md-6 mb-4">
 
         <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
 
@@ -33,6 +34,7 @@
         </div>
     </div>
     {% endfor %}
+    </div>
 </div>
 <div class="container row">
     <p>Total</p>
