--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -4,42 +4,46 @@
 
 {% block content %}
 <div class="container">
-    <div class="row text-center">
-    <h1>Shopping Cart</h1>
-    {% for item in cart_items %}
+    <div class="row">
+        <h1>Shopping Cart</h1>
+        {% for item in cart_items %}
 
-    <div class="col-lg-3 col-md-6 mb-4">
+        <div class="col-lg-3 col-md-6 mb-4">
+            <div class="card" style="width: 16rem;">
+                <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
 
-        <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
+                <div class="caption">
+                    <h3>{{ item.product.name }}</h3>
+                    <p class="product-description">{{ item.product.description }}</p>
+                    <p>{{ item.product.price }}</p>
+                    <p>
 
-        <div class="caption">
-            <h3>{{ item.product.name }}</h3>
-            <p class="product-description">{{ item.product.description }}</p>
-            <p>{{ item.product.price }}</p>
-            <p>
-
-                <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <label for="exampleInputAmount" class="sr-only">New Qty</label>
-                        <div class="input-group">
-                            <div class="input-group-addon">Qty</div>
-                            <input name="quantity" type="number" min="0" max="999" class="form-control">
-                            <div class="input-group-addon">{{item.quantity}}</div>
+                    <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <label for="exampleInputAmount" class="sr-only">New Qty</label>
+                            <div class="input-group">
+                                <div class="input-group-addon">Qty</div>
+                                <input name="quantity" type="number" min="0" max="999" class="form-control">
+                                <div class="input-group-addon">{{item.quantity}}</div>
+                            </div>
                         </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
-                </form>
-            </p>
+                        <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit"
+                                                                            aria-hidden="true"></span>Amend
+                        </button>
+                    </form>
+                    </p>
+                </div>
+            </div>
         </div>
-    </div>
-    {% endfor %}
+        {% endfor %}
     </div>
 </div>
 <div class="container row">
     <p>Total</p>
     <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}</p>
-    <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
+    <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign"
+                                                                               aria-hidden="true"></span>Checkout</a>
 </div>
 
 {% endblock %}
