--- a/templates/base.html
+++ b/templates/base.html
@@ -6,57 +6,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Guitar World</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">    <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+          integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% block head_js %}
     {% endblock head_js %}
 </head>
 <body>
-    <!-- Fixed masthead -->
-       <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-dark">
-           <a class="navbar-brand text-light" href="/">Guitar World</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
-            <div id="navbarNavAltMarkup" class="navbar-collapse collapse">
-                <div class="navbar-nav">
-                    <ul class="navbar-nav mr-auto">
-                    {% if user.is_authenticated %}
-                        <li><a class="nav-item nav-link active text-white" href="{% url 'profile' %}">Profile</a></li>
-                        <li><a class="nav-item nav-link text-white" href="{% url 'logout' %}">Log Out</a></li>
-                    {%  else %}
-                        <li><a class="nav-item nav-link text-white" href="{% url 'registration' %}">Register</a></li>
-                        <li><a class="nav-item nav-link text-white" href="{% url 'login' %}">Log In</a></li>
+<!-- Fixed masthead -->
+<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-dark">
+    <a class="navbar-brand text-light" href="/">Guitar World</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div id="navbarNavAltMarkup" class="navbar-collapse collapse">
+        <div class="navbar-nav">
+            <ul class="navbar-nav mr-auto">
+                {% if user.is_authenticated %}
+                <li><a class="nav-item nav-link active text-white" href="{% url 'profile' %}">Profile</a></li>
+                <li><a class="nav-item nav-link text-white" href="{% url 'logout' %}">Log Out</a></li>
+                {% else %}
+                <li><a class="nav-item nav-link text-white" href="{% url 'registration' %}">Register</a></li>
+                <li><a class="nav-item nav-link text-white" href="{% url 'login' %}">Log In</a></li>
+                {% endif %}
+                <li><a class="nav-item nav-link text-white" href="{% url 'view_cart' %}">
+                    <i class="fa fa-shipping-cart"></i>Cart
+                    {% if product_count > 0 %}
+                    <label class="badge badge-warning">{{ product_count }}</label>
                     {% endif %}
-                        <li><a class="nav-item nav-link text-white" href="{% url 'view_cart' %}">
-                            <i class="fa fa-shipping-cart"></i>Cart
-                            {% if product_count > 0 %}
-                            <label class="badge badge-warning">{{ product_count }}</label>
-                            {% endif %}
-                         </a></li>
-                    </ul>
-                </div>
-            </div>
-    </nav>
-    {% if messages %}
-        <div class="alert alert-success">
-            <div class="messages">
-                {% for message in messages %}
-                    {{ message }}
-                {% endfor %}
-            </div>
+                </a></li>
+            </ul>
         </div>
-    {% endif %}
-    <div class="jumbotron">
-      <h1>Guitar World</h1>
-      <p>A World of Guitars</p>
     </div>
-    <div class="container">
+</nav>
+{% if messages %}
+<div class="alert alert-success">
+    <div class="messages">
+        {% for message in messages %}
+        {{ message }}
+        {% endfor %}
+    </div>
+</div>
+{% endif %}
+<div class="jumbotron">
+    <h1>Guitar World</h1>
+    <p>A World of Guitars</p>
+</div>
+<div class="container">
 
-        {% block content %} {% endblock %}
-    </div>
+    {% block content %} {% endblock %}
+</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -71,6 +74,7 @@
          $(document).ready(function(){
             $('.sidenav').sidenav();
             });
+
 </script>
 
 <footer class="py-5 bg-dark">
