--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,12 @@
                     <label class="badge badge-warning">{{ product_count }}</label>
                     {% endif %}
                 </a></li>
+                <li>
+                    <form class="form-inline">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                </li>
             </ul>
         </div>
     </div>
@@ -74,6 +80,7 @@
          $(document).ready(function(){
             $('.sidenav').sidenav();
             });
+
 
 </script>
 
