--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -32,7 +32,7 @@
 </div>
 <div class="row">
     <p>Total</p>
-    <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}</p>
+    <p><span class="fas fa-shopping-cart"></span>{{ total }}</p>
 </div>
 
 <form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
